--- a/QLHSTHPT/FormChinh.resx
+++ b/QLHSTHPT/FormChinh.resx
@@ -2159,6 +2159,132 @@
         rkJggg==
 </value>
   </data>
+  <data name="barButtonItem36.ImageOptions.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAZdEVYdFNvZnR3YXJlAEFkb2JlIEltYWdlUmVhZHlxyWU8AAAACnRFWHRUaXRsZQBQaWU7r9bV
+        tgAAA3ZJREFUOE89k31Mm1UUxu8mw0WzuOHiPzqnEcwi4OaGayuSicOPScyAQEwk6MJmMotr18JaCqvT
+        EYUaW0r5iC0IkvUPA4WVsRZa2jI6yip0FMrogrgZFAmDMrdEBSr4eN6X6U1+eXLOuc+Te9/clwV/bWLj
+        sy2M1iYipqT25WyVSdBY3iS8rm4RrXJaahQ0yWtScmi+hdu39ouTrc30sPH6Y4yNbZg3FygSn1KZhN1a
+        SzY8oRpMznbgdsSJG7MWqvXQUV9lFF4+Kdm/i9u/NuPcCOCKQvWLyepv0xbavEqE5ywY/rke3mkN+m9W
+        wDulgf92HSbn2mDrLcOo4YM7DR8ffpbzBWsKGEvYG/eIokE0bvV/hsCMCe7wObjCn8IZVsNB2jd5Fg7C
+        PXAW//w+jfkBI7yVeXYK2EpsYuIvD3yka8uD75YB9lA57DdUsE8QoVLYJohxJZwuJdbvXEc0ZMTf0xZM
+        NEvQoXj7BAXEMIlW4OrwlaErWEIUwxqUbTB6GhcJu0OG9fkRRIP1WB2rw+poLeY9BjjKjrj5U0i1gqWL
+        ASUsI0WEGJbhIrQPi3k6e85gfc6P1YAe0UA1qQ7RER3++MEAZ+mbixTwKCv66iCMnjw0e/NhvlYI89Bx
+        XBgqhL7rPXT7yOzXEFVEJVaukQ6ex59X1OiRvxalgG3sREXK3a8vvQW94wgMve/gG1cOTBSoaT8K6837
+        8PZ+h5Wr57BMH3HZo8Sy+wzu2+h6YmGED8hX7LvyufkwtLY3oLNlkG5Q3pKG1tG7PI7OOqy45firrxgr
+        LjlutRxDa8G+Af4Kmcf3yMRVImgupUPTTXBKlDanojGwBBPROLIEm8WA5T4pcRouRToqM+NPUUAs2xb3
+        8OPZp5Km5A1CfNF1CJWdh3hVNolQ548Qiw+IwPq9HmFDDhqyEzxk3k5wz59t2f/6k69kfZIYEWsP4Lzl
+        VSIVJUYBdEOLqPZFUD24AO3gIsQXQpCdLFrKeSFuL/liWnOf4/x8Smz8SzuTMgoS+nOLkyCtT4G0NgWa
+        qwuocP0GWfsU3q3qh0hq7t8lyk3m9nO+5qxnGOseU/0XEkPsOJj5tCT9/XhfxofP30tTXUaqwnpPKDH7
+        kvOrpNyc4P/In34MMj4gdutDbHfiDiY6upv6bDPBvfHHiJ3EEw+Uq7k+N/9/Ze3Zzv4FiQ4h2yjhmusA
+        AAAASUVORK5CYII=
+</value>
+  </data>
+  <data name="barButtonItem36.ImageOptions.LargeImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAZdEVYdFNvZnR3YXJlAEFkb2JlIEltYWdlUmVhZHlxyWU8AAAACnRFWHRUaXRsZQBQaWU7r9bV
+        tgAACUlJREFUWEedlwdUVOkVxwejJquJJpvNZpMcj7tJPHpEz+pqRLGwKoiigA1xLRQpUkUUzcaCBR2q
+        NCmCCNL7DB1dEaSDIEVAxYJiW/XYEBCHXfefe9+8GcB43CT3nN+79/u+997/vu9+35s3kv/DNH6G/91C
+        5fYfhEx182HEL4jhxIh34D6Gx/k8DdX1F31N34vaQmR2kifdzUN51cxDg0VHeERumuGfbO0RnG5bRTTS
+        dT8yHHMfjx0M3zCTzh1JcDJCIj/1PpS8y5AEjmfakmDTEMhYnIVHeseamwZn2FyPLnDDuUvhaLmTi2v3
+        z+JR1yUBjrmPx6ILdoLP9Ywx20jX/lK8h8bb3gcSFT8RQxIISrcm0UbJ41cNAmSc+fDdvqsmBKRsqU06
+        t58E8nDveQVa7yej8rofSq9JkdfkJlB6zRMV1NdyP4nOKUNrZx6SitzB17p4GE6ke3GJhr3tuS9RMSSB
+        gNQtJHxJ8rjrEjdZfMSBMFP9wDTr52UtMeh48h3Kr/sgt3H7B8kRvAvK2j1x80khSi+fQlC8+fOsb5cv
+        pXtyWYa97e6UMDXe61hLaX7JFpLvu+o55GkfsS9krX5wxlZFY4ccdbcjkN2w7b1kiQz0OQ+Kt6G+KRov
+        28+jLsBMkbFr6TK6tzKJV3ck1Z5rWU9pPomb2LH4cMdDSyf7JZs/a7otQ8lVKeSXHCGvF+F4MGKfbFCf
+        EFN/TuFOKK7E44eHlehqL0GVl+mz8K0LNEmDy6FReXQ1aypNGvsNO14sH3lEm1YXN0VSXb2QWWf/Aeze
+        06ckO387FC2n8UNHPvkY9N/KxcOKBJQcNKohjVGiFj+w2rgxcleA0eYwuROa7sYi/aKNQMZFW5HB8QDp
+        dcSgtjx3GxTNUSSaLXgFPQzz470yNITZI91V15y0eHfwWhNMtd1GuUesvFHZFkP1c0VqjTXSaqyQVmtN
+        MXlqK70SVZxK46rzZDmOUDScQP91GRS0JQXqw5Se1sPTBhmK9hrcJK1fE/yeEGaBDyPsDi4yOJZkiZqO
+        UKTUWCK52gLJNQT7arEt9P3nWAr5zCw79NWHQHEtHX11IXhTfxxv6pT01QeTD6ZZycPFAAtE2cxbQZq8
+        IIUEeCp+5eKtF5hUtAeZtIASK82QWCUixgmqWMWgdrrMFn0Xg9DflkI+kAjAm5oA9NX4K6kmao9REiG4
+        JTuCTGedYNL8SNQWDqOdfXSrsmvcEVWyBtEXTBBfsQlxRHwl+43UZqhNnvvjhP5NSE23wptqPyhaE9BX
+        5Uf4oq+S8SZ8RO+FvtLD6Ctxx6PiIOS46FSTJpeBSy8cfuPk+fXT/Ia9CD9ngOAzSxB5fiViy74hNgzy
+        RPlAOyXVEn0VXlBcjiXvqaRcKnIUfWXMEbw+vw+9Z3ag9+xudFWFIM9l/jPSHEPwOhAOY+yOLOjPa9iN
+        oDN6CCzURRAR+p0BTpWspRlZJ2KC6FJl7J1iiKbqAhLywetSD7y+cFjkkJKSQ+gtPoieM7vRm++i5nVN
+        IHKc5/aT5m8HJzDW6sDcfnndNhJfjICCRSKLEUhwIpHFq4TycEKnyEuTDFDb2YWG8hy8oq3bV+yO18X7
+        6WmJor14XbgLvbnO6Ml1Iu+EHtohvdnO6C33Qpb9bE7gd0MSMNsz61lSuQ09uR788xcKBLDPU8YMj4Wc
+        XUZlMsTh+CXIa32KvLanqC2WoTvNCr30S9hD74GebAcScyBvrySL2YrubEc8P7MfmTYzuATqBHgNjNng
+        NrMmstCcBAxwLPdrHMsbip+ADsU6gt8dMRvJlx7Dv6gTSfWPUJofj5fRa9Aj30rYood2RrfcBt0ya4rJ
+        Z9oIid1L3Y5E82m1pDlW1BYOo1c7fRnqlWCCyKKV8MtdIOCbqyNCcQ71MeKY2wktxNU+hNfZDnid6UBs
+        7QMU55zGi5PG6M6wIrYoSRNJt6QEtuHy8c2IWDc5jDTVu0B4D+htnLjKQbpQWN2+OfPhk02wV8UqxD63
+        E7MQU/0ARwtuwYM4nH8TUZUPcE52Cs9PGKInzZyEzcmboTuV4lQz9ObtQKGrDg7rf2FCmur3gPAmJD42
+        cZnWEShfTbXXhXf2XGIevLOIwV5gLnaG/wMnK+/jQO4NHMi+Dndif9Z1nCi7h8KMk3gRsgzdyZtENqKH
+        ZqAzxgKnTSd1kNbvCfWbkA9CGWgWttoemoeo82vhlaVNzIWniNCWa8NTTjH5HWEzEU5i++Tt2EP8S9aO
+        b2VX8c/Mqwi+0In8lHC8CNJDd8J6vIpfT+vCHnkOWjisN56/clXTLyTAxgFn9LGx3dT6gzH6NAtLIJXN
+        gVQQnSMgZWTagncNm4Hgkk7szrgKN2JX+hW4pV3FzrQr2EH4F91GTmIongfoojtlM1p8jRC58m+NpPGJ
+        qKUWZ1PNwqivFo/TXuM87YVvhgHVWgdHZbMFpIKfo267hs4gkTtwTWmDa3IbthMuSQT5bYmtcE5qhc9Z
+        TiIct/2W4bTJhBcW0z+ZRxqjRa2BBIwdprDjDt6XY7QNP19nsv3LfmmyPm25hTgi01KSOcD20K8EAWcS
+        c0pohSN5R/IOTHwr7ONbhKT2JjbAZb15/845n/FXKG891tCINv6cnGiGdpqSihv+HHISvCDHzl4xfp2R
+        nebLPRE6CCrQF2rvkTFLjUvIdHjS9mMhu7jLRAu2kreNvUxJtGBH6hVs8CrGtDVhXX/VdlxP9+RXrzD1
+        isYoSZTReApFW2E7WVLe7sshJ6BOYpLWp7P1LSc1me2ZDo/ERfRa1qetqCOsC9fwmThScAM2JGgX1wy7
+        +GY4UQn4qa1Cq6Fjm4gphv5Nf9JcOZvvRajqrqFoiJRErRhHoWgGNpMkZe3ektJ2L26qkuCp4np9Osdo
+        vNNSy4l3TVynwtFPC+6xOtgZOg/+52/DNbUN1uG1MA+uhOGeXGhtisZUw4C7f5+/w5mu/SPBK174EGVa
+        6iskioaIoQkss5okuXDVU0TKXaokeLHw9xv/dH42beFfDHXWfhGmu3lCs97mCe1TjEMw1fg4NJf7tU9e
+        7tc8Udc9bNwMCyM+l+CnVv8zYuLrvpfEEZzEkAT0LTQl+lsmKrEcgOzdRPhpuJZ/IFjkzyIccx//wPA5
+        Q4SnGAZLNN/BesWgf0b/hakS4Vcnl4anlGvKQgzH3MdjfI7q/J8xieTfSaWo9oLMsrEAAAAASUVORK5C
+        YII=
+</value>
+  </data>
+  <data name="barButtonItem37.ImageOptions.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAApdEVYdFRpdGxlAFJlbW92ZTtEZWxldGU7QmFycztSaWJib247U3RhbmRhcmQ7Y1ZIMAAAAnhJ
+        REFUOE+lk1tIk2EYxy13cOpyrZtI2pYlpZJKySq7SW+SkTmLzHRLax6qzUNN84CNaLhdpFJz6k0niVlQ
+        titNQsqBB8hBlpGBFB3I6GBrtUqv/r3Pt2lfdVcP/L7vff/P8/9v3/fyhQH4L4KXX7WUIQjdl5AQKlqH
+        M4QM6nM9fgAJgoelh85MHyv7OLg7+wjb0zDphHC0WGek3vjhIivbi0nnB4SPF+tt7690YH5yCFOn69Gb
+        mWlkuoiGPYX5ppn2s6znwbtLTozoC+xMF/IDRBNFet/3UTcCvW2YG76BiZNVuJymrurbk1v9ss2GeW8f
+        AjdbERjoxsRBvY95JPwAgWtbuvGByYCv7nb4u634ca8H9yvK8cxuwdyYG1+uWjl9OF+Lc/EJx+lH+QH0
+        nOLOpOTKEd0++LqbMdtVj0D/BXy7fRGfuhow21mHQU0GbLEqM5uNJA8/gIpCJHbFWvNdrQYfHDV4azUw
+        Srh7/46taJSvrGcz0Qw6paD3j4DI86nq2jGDHm+s5XhVs3+RUV0eWlLSGtmMlPFXAGduSUg1e3T5mGmt
+        xXSJBtOlIdj6tfUohvL2wrY+efFf8ANEzWsSzXdysvHCUoYnBRmYYlxbp8T1hHhuTTw/UYgBTRYsyg0N
+        zPPbKUR3KBL9T00HMJm7HY9y0tETp4BREH3KKIyy9MSpMKlN53hctAtOZZKfeWT8gIimFSqHe/MmeLPU
+        cClWo1IkpeeNIUzimCaXSgnvzi24lbIRdXJlB9Oj+AH0UmJqpLEOm0zpqwial4V0rmeMWN7Eep+rpauc
+        bC8nnR9ARYN0vjKGJLRfqIUeGekF0ocV9NLl30HYT5jov8COKRjfAAAAAElFTkSuQmCC
+</value>
+  </data>
+  <data name="barButtonItem37.ImageOptions.LargeImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAApdEVYdFRpdGxlAFJlbW92ZTtEZWxldGU7QmFycztSaWJib247U3RhbmRhcmQ7Y1ZIMAAAB9ZJ
+        REFUWEfFlntUVVUex681kyUopog0KFwQfFxBeSgKqKDIQwFRAR0HGctUfASpgIKAoILIQxQxC0ZAfNEi
+        bEE+wlAQxNeIIpSupIiLD9AgRXOk1cT5zu93Lucm3Ouq/pl+a33Ym332/n2/e5+997kyAH8qWhv/n6j+
+        aI8+xCvdcP2PBPfvPV4jx8sMSAP/SvTthuu/1wj3eZV4jXijG87BbT3GazMgDe5buXBhqDJ5R6cyOamz
+        IiDgPWp7vftZnxuLF8uY2sWBKgJV8DPiL8QbZX7zQxoTEzsbExI6S+fOXUdt/bqfqU30NiCJv35ugX/k
+        nb1p+O+9OhHlnhSc8fMLo2c8G9FE14OvZCKtzJfUpBbvd8rXd33TriT8rLyGn5tq8B3VT83xjaZnOt19
+        RBPaDLxW7ue3vpnEf7pZjSelheg4fgQ/1VWgKSMFpb49Z/JLS73sl/v1VFWL63zm7RPWmJ6E51e/QPuh
+        D9CWnYpnVcVo3LkdJ7y8I6gPryS/Tg0Dr0ySy3Ub4uM7n187g46Sw3hclCvyqCgHz2vKwImPe/nwSrw4
+        E7V48WyvsG9TE/Cfy6Voy8vAg31JeLg3Ea0Z29Dx+VHcioruHGtoqEd9eRU1DLzqZTFy4MVlK560F+Xj
+        h4KsXzn6EdqPfEiJT4EFimfNZhO6BG80RveYx6zwhuRteHbhJNr2p6M1k4W3onVXPFrSYnE3ORrVS5c/
+        czY2GcxahOYKEH33Wdm8XRkU2NV2IBNt+d0c2IPv85gM/Hi+BA07tuITN89w6j+QKXTziLidtAU/VpXg
+        YVYqWnZtwf30ONwn4XvJm3BneyTO+np37VaMf5f68z7S+gp4KdlZv91jLFdWLFrY9SA7DQ//tRMPs5k0
+        PMgiPkrB07NF+DohDoemu0YdcnGNupWwGU8rPkXrB0m4v3Mz7qbE4O4OEk7ciOZt4Tjt5dmVbD56DeXu
+        T/CRZi0NAxzS+9RNGTFqddn8eV0te7eLiblsoWVt2UNkJOAxvdOb8dEiHWWFYhsvM8/2TsIGNG8NhzJu
+        HU66zRQS5OZ8jAcQanEODQM5FgouuAN37L/dxHz15z7eXXfT43GP2RmHe2k0w1TVLH8oPoBHJw5TWxzN
+        dAOUNFtl/Ho0kXBjdChKXJyFuL+ZhFAu3ni8V3pcZhoGsuUjZU8rjnFVMjEgfph8zQlPj67mpCjcIZpp
+        hs2JkVDSLJXbIqDcEoYmFo1di+9iQkk4BN9uXIUiJ0chaohRKOXgfaIW32tkSoUqNAzsG2Ym6/iiQNZx
+        uoD/VZuIHmoUcsxhknB7TRC+iQhG44ZVaIxag0ZJMGIlGta9i9uhS3BrWQA+th4vRAwa+j6N7SHeXpIn
+        2z10GFVVoWFgz1vGskcnDhL5skfH87lJPBmEfpi+YVihrY1Qv9ATXzILPFAfoKIuwB31/u6o83fDEcUY
+        4T29wXzhGBDSpdOnrTBLxuwcbEj/qkLDwEkXN1n7p/tl7cf287+8AjyYkwzJsLHffHHJYnwVNBc35rt1
+        MxO181xRO58Qy5mo+nsA0qzs4mnMUEI6cn0eHM6UMakD2ZcqNAx8NsVV9n3BPq5K4rx8b2Za22+6tHwp
+        lMlRqFvkhetzZ+C6LzMd1+ZMx3UfFyqdUePjjG82rcb5JUFIt5wQQ2P50uEVFE205KTJPpkwhaqq0DBQ
+        7ODChSTOAwftHjchuvqdf6IpIRy1CzxR401C3tOIqajxmoqrXtNwdTaVErOm4Ovw5agMXIRUhU0s5WAT
+        6i/px7aOVKhCwwBFD/F0S9uYqqBANMatRa2fG/5NyUU8nXCF8WAcu3HAFXcHXHafjMtuk3EzZAnKFwQg
+        adS4zZRLn1DvB0KM3gZ6iKcpbGLoNkQDLek1WnJOfkVMTiIkcGnmZOSNMBWYizMm4ZKrvYoZE6mciItU
+        1gcvQtm8eUgwt4yjnEOIHia0GeB3PihltHXMWX8/WsoVtNQuvyYnOPEFl4nIM5MLK3T0YpkDFiOEaucJ
+        1G5H2OKCsy2qp9kRtrjxjh9Kvb2x1WysZIInqGGAG/gd9U+0sAo77TMHt95/G1dmTaWEqsTVzpScOE+J
+        c01NhDW6AzdSfyNmte7AyDzzEULVFGucVzNepMppHK79wwfHXd0RKx+9gfrzrSh+ynsb4EtH/6idc0dd
+        cCAu0zuunmqD8yKUkKhyskaO3FgS5/PEP04YAzaRa2YqnHOwQiVxbjJjiXOTVFz280C+leMT6svHU/wm
+        aDVw0Nqp7eJsZxJTua9yZCgZJc0xGS6wEPVjcennGcN1g1W6elG5pnKh3F6BiomE/Rio6mNwZqIlchX2
+        7dyP0GqAEw2INB4ZXGhjL1Q6sPOxqCDKif3Gw3qLS5uJ4Tq3DV2po7cpV24inLEbhbNEuS2VxOFRVsI6
+        Q9PV1IevZ/FIvmiAgxPxJtSPMDJfW2BlI5TZKXBmggJZRkZaxWuXBchql/pTtYcJQzaRPXy4cHr8SJSO
+        s8BBi7FCqIGcf0Xx8ksXk0q7lwF+IF69YW+ZrfxQbtVOPArW0ePvOYurj1Gynr7sRbit+5m4Est19EIz
+        hyseZw5TtIcYmPCPkR5XM6FhgENKwi55t/IghpdNci4Ofkm8OP5Ngr88DNfVtyEhhjYDHFISPir8Shiu
+        /5a4FL97/MsMSMGdX+SPxm+OVxv484Dsf9mcyoMRMH/dAAAAAElFTkSuQmCC
+</value>
+  </data>
   <metadata name="statusStrip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>17, 17</value>
   </metadata>
